# advent_2024

day_eight_part_one/: CMakeLists.txt
day_eight_part_one/src/: main.cpp
day_eight_part_two/: CMakeLists.txt
day_eight_part_two/src/: main.cpp
day_eleven_part_one/: CMakeLists.txt
day_eleven_part_one/src/: main.cpp
day_eleven_part_two/: CMakeLists.txt
day_eleven_part_two/src/: main.cpp
day_five_part_one/: CMakeLists.txt
day_five_part_one/src/: main.cpp
day_five_part_two/: CMakeLists.txt
day_five_part_two/src/: main.cpp
day_four_part_one/: CMakeLists.txt
day_four_part_one/src/: main.cpp
day_four_part_two/: CMakeLists.txt
day_four_part_two/src/: main.cpp
day_fourteen_part_one/: CMakeLists.txt
day_fourteen_part_one/src/: main.cpp
day_fourteen_part_two/: CMakeLists.txt
day_nine_part_one/: CMakeLists.txt
day_nine_part_two/: CMakeLists.txt
day_one_part_one/: CMakeLists.txt
day_one_part_two/: CMakeLists.txt
day_seven_part_one/: CMakeLists.txt
day_seven_part_two/: CMakeLists.txt
day_six_part_one/: CMakeLists.txt
day_six_part_two/: CMakeLists.txt
day_sixteen_part_one/: CMakeLists.txt
day_sixteen_part_one/src/: code.cpp  code.h  main.cpp  test.cpp
day_ten_part_one/: CMakeLists.txt
day_ten_part_two/: CMakeLists.txt
day_thirteen_part_one/: CMakeLists.txt
day_thirteen_part_two/: CMakeLists.txt
day_three_part_one/: CMakeLists.txt
day_three_part_two/: CMakeLists.txt
day_twelve_part_one/: CMakeLists.txt
day_twelve_part_two/: CMakeLists.txt
day_two_part_one/: CMakeLists.txt
day_two_part_two/: CMakeLists.txt
(+19 files in other folders)
